[Fix][Zeta] Fix classloader deep clean logging, JDK 8 compatibility, and review issues